<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/difficultyTitle"
		android:layout_margin="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diftitle"
        android:layout_gravity="center_horizontal"/>
    
     <Button
        android:id="@+id/resumeBtn"
		android:layout_margin="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/resumLast"/>
    
     <Button
        android:id="@+id/easyBtn"
		android:layout_margin="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"/>
     
     <Button
        android:id="@+id/mediumBtn"
		android:layout_margin="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium"/>
          
     <Button
        android:id="@+id/hardBtn"
		android:layout_margin="5dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"/>
     
</LinearLayout>